--- a/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
+++ b/flashcards/src/main/resources/tn/flashcards/fxml/edit-view.fxml
@@ -13,10 +13,10 @@
    <center>
       <TableView fx:id="table" styleClass="tableStack" stylesheets="@../css/style.css" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="cName" prefWidth="170.0" text="Nom🖉" />
+          <TableColumn fx:id="cName" prefWidth="170.0" text="Nom 🖉" />
           <TableColumn fx:id="cNb" prefWidth="60.0" text="Nb." />
-            <TableColumn fx:id="cTags" prefWidth="120.0" text="Tag🖉" />
-            <TableColumn fx:id="cCreateur" minWidth="0.0" prefWidth="170.0" text="Créateur" />
+            <TableColumn fx:id="cTags" prefWidth="120.0" text="Tag 🖉" />
+            <TableColumn fx:id="cCreateur" minWidth="0.0" prefWidth="170.0" text="Créateur 🖉" />
             <TableColumn fx:id="cDate" minWidth="0.0" prefWidth="150.0" text="Modification" />
             <TableColumn fx:id="cExport" editable="false" prefWidth="45.0" sortable="false" />
             <TableColumn fx:id="cEdit" editable="false" minWidth="0.0" prefWidth="45.0" sortable="false" />
