[FIX] Problème de surchage de CSS non désirée

--- a/flashcards/src/main/resources/tn/flashcards/css/style.css
+++ b/flashcards/src/main/resources/tn/flashcards/css/style.css
@@ -88,8 +88,8 @@
     -fx-border-width: 2px;
 }
 
-.list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected,
-.list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected{
+.no-selection-color-list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected,
+.no-selection-color-list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected{
     -color-cell-fg: -color-bg-default;
     -color-cell-bg-selected: -color-bg-default;
     -color-cell-fg-selected: -color-bg-default;
